fix: fix jumpy behavior of text inputs with errors

--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerDetails/style.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerDetails/style.module.css
@@ -61,6 +61,7 @@
 .hiddenError {
   visibility: hidden;
   height: 0;
+  width: 0;
   padding: 0;
 }
 
